<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.j2page.freebachradio.PlayActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:minHeight="300dp"
        android:minWidth="300dp"
        android:src="@drawable/cover_loading" />

    <TextView
        android:id="@+id/composerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pieceText"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/composerLabel"
        android:layout_toRightOf="@+id/composerLabel"
        android:text="@string/sample_composer_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/releaseLabel"
        android:layout_marginTop="12dp"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:text="Pause" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pauseButton"
        android:layout_alignBottom="@+id/pauseButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="Next" />

    <TextView
        android:id="@+id/pieceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/sample_piece_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/composerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/composer_label"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignBaseline="@+id/composerText"
        android:layout_alignBottom="@+id/composerText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/performerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/performer_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_above="@+id/releaseText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/releaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_release_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/performerText"
        android:layout_alignLeft="@+id/composerText"
        android:layout_alignStart="@+id/composerText" />

    <TextView
        android:id="@+id/releaseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignBottom="@+id/releaseText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/performerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_performer_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/composerText"
        android:layout_alignLeft="@+id/composerText"
        android:layout_alignStart="@+id/composerText" />


</RelativeLayout>
